Use Reducer and ContextAPI

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $bg-color : rgb(209, 209, 209);
-$primary-color: rgb(83, 97, 224);
-$secondary-color: rgb(137, 77, 177);
-$dark-color: black;
+$primary-color: rgb(221, 222, 233);
+$secondary-color: rgb(92, 80, 100);
+$dark-color: rgb(161, 149, 194);
 $light-color: white;
 $earn-color: rgb(38, 197, 38);
 $spent-color: rgb(196, 27, 27);
