--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,9 @@
 
 body{
     background-color: $bg-color;
+    padding: 2rem;
+    border-radius: 1rem;
+  
     
 }
 
@@ -26,6 +29,7 @@ body{
 
 }
 .App{
+    @extend %card;
     margin: auto;
     width: 50%;
     text-align: center;
@@ -36,6 +40,7 @@ body{
         @extend %card;
         background-color: $secondary-color;
         color: $light-color;
+        font-size: 2rem;
 
     }
 
@@ -68,9 +73,15 @@ body{
         background-color: $dark-color;
         color: $light-color;
         
+        .trans-header{
+            @extend %card; 
+            background-color: $secondary-color;
+        }
+
         .form-items{
             display: grid;
             grid-template-rows: 2fr 2fr 1fr;
+            
             .trans-description-input{
                 @extend %inputs;
             }
@@ -89,6 +100,25 @@ body{
                 background-color: $secondary-color;
                 color: $light-color;
             }
+        }
+    }
+
+    .transaction-list{
+        @extend %card;  
+        background-color: $dark-color;
+       
+        .trans-list-header{
+            @extend %card; 
+            background-color: $secondary-color;
+            color: $light-color;
+    
+        }
+        .trans-list-items{
+            @extend %card;  
+            background-color: $primary-color;
+            list-style: none;
+            
+            
         }
     }
 }
